# RixJson

./: .gitignore  CMakeLists.txt  README.md
src/: RixJson.cpp
test/: test.cpp
